--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+html {
+  height: 100%;
+  background: linear-gradient(to left, rgb(71, 40, 40), rgb(216, 185, 99))
+}
+h1 {
+  margin-top: 5rem;
+  text-align: center;
+  color: whitesmoke;
+  font-size: 30px;
+}
+form {
+  margin-top: 1rem;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input {
+  height: 35px;
+  width: 250px;
+  font-size: 20px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button {
+  margin-left: 5px;
+  font-size: 23px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+button:hover {
+  background-color: black;
+  color: whitesmoke;
+}
+.completed {
+  text-decoration: line-through;
+  opacity: 0.5;
+}
+div.todo {
+  list-style: none;
+  margin: 1rem;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+li.todo-item {
+  font-size: 25px;
+  width: 80%;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  background-color: darkgray;
 }
